# mnemonic-toolkit

./: .gitignore  .manual-gui-v1.0.0-shipped-handoff.md  .wallet-import-v0_26_0-resume.md  CHANGELOG.md  CLAUDE.md  CONTINUITY.md  Cargo.toml  Cross.toml  Dockerfile.repro  LICENSE  README.md  cycle-prep-recon-all-single-sig-batch-emit.md  cycle-prep-recon-api-harvest-drift-and-self-check-ms1.md  cycle-prep-recon-bip389-double-star-shorthand-support.md  cycle-prep-recon-bitcoin-core-receive-change-pair-merge.md  cycle-prep-recon-bsms-decrypt-record-string-zeroizing+import-wallet-plaintext-blob-mlock-pin.md  cycle-prep-recon-bundle-slot-ms1-input.md  cycle-prep-recon-ci-actions-catch-up-and-self-trigger.md  cycle-prep-recon-ci-test-hygiene-cluster.md  cycle-prep-recon-codec-test-hardening-themes-1-2-3.md  cycle-prep-recon-concrete-nonranged-xpub-implied-wildcard.md  cycle-prep-recon-cycle10-mdcodec-lib.md  cycle-prep-recon-cycle11a-gui.md  cycle-prep-recon-cycle11b-toolkit-hygiene.md  cycle-prep-recon-cycle12-mkcli.md  cycle-prep-recon-cycle13-fidelity-tail.md  cycle-prep-recon-cycle14-secret-memory-hygiene-tail.md  cycle-prep-recon-cycle2-h8-h10-h7.md  cycle-prep-recon-cycle2-residual-followups.md  cycle-prep-recon-cycle3-h2-h3-gui.md  cycle-prep-recon-cycle4-h6-m4-m6.md  cycle-prep-recon-cycle5-snet-network-invariant.md  cycle-prep-recon-cycle6-timelock-decay.md  cycle-prep-recon-cycle7-m8-build-descriptor.md  cycle-prep-recon-cycle8-mscli-panics.md  cycle-prep-recon-cycle9-mdcli-parser.md  cycle-prep-recon-cycleA-descriptor-use-site-collapse.md  cycle-prep-recon-differential-harness-breadth.md  cycle-prep-recon-documentation-audit.md  cycle-prep-recon-electrum-addr-derivation-and-origin-extraction-dedup.md  (+52 more)
crates/mnemonic-toolkit/: Cargo.toml  README.md
crates/mnemonic-toolkit/src/: address_render.rs  bip85.rs  bsms_crypto.rs  bundle_unified.rs  decode_address.rs  derive.rs  derive_address.rs  derive_slot.rs  display_grouping.rs  electrum.rs  electrum_crypto.rs  env_sentinel.rs  error.rs  final_word.rs  format.rs  friendly.rs  indel.rs  language.rs  lib.rs  main.rs  mlock.rs  network.rs  nostr.rs  parse.rs  parse_descriptor.rs  permutation_search.rs  process_hardening.rs  prop_repair_never_wrong.rs  repair.rs  secret_advisory.rs  secret_string.rs  secret_taxonomy.rs  secrets.rs  seed_xor.rs  seedqr.rs  silent_payment.rs  slip0132.rs  slot_input.rs  slot_ms1.rs  synthesize.rs  (+7 more)
crates/mnemonic-toolkit/src/cmd/: addresses.rs  build_descriptor.rs  bundle.rs  compare_cost.rs  convert.rs  decode_address.rs  derive_child.rs  electrum_decrypt.rs  export_wallet.rs  final_word.rs  gen_man.rs  gui_schema.rs  import_wallet.rs  inspect.rs  md1_partial.rs  mod.rs  ms_shares.rs  nostr.rs  repair.rs  restore.rs  seed_xor.rs  seedqr.rs  silent_payment.rs  slip39.rs  verify_bundle.rs  verify_message.rs  word_card.rs
crates/mnemonic-toolkit/src/cost/: dummy_keys.rs  enumerate.rs  format.rs  mod.rs  strip.rs  translate.rs
crates/mnemonic-toolkit/src/descriptor_builder/: archetype.rs  gate.rs  ir.rs  mod.rs  schema.rs
crates/mnemonic-toolkit/src/slip39/: error.rs  feistel.rs  gf256.rs  lagrange.rs  mod.rs  rs1024.rs  share.rs  wordlist.rs
crates/mnemonic-toolkit/src/wallet_export/: bip388.rs  bitcoin_core.rs  bsms.rs  coldcard.rs  descriptor.rs  electrum.rs  green.rs  jade.rs  mod.rs  pipeline.rs  sparrow.rs  specter.rs
crates/mnemonic-toolkit/src/wallet_import/: bitcoin_core.rs  bsms.rs  bsms_round1.rs  bsms_verify.rs  coldcard.rs  coldcard_multisig.rs  descriptor.rs  electrum.rs  jade.rs  json_envelope.rs  mod.rs  overlay.rs  pipeline.rs  roundtrip.rs  sniff.rs  sparrow.rs  specter.rs
crates/mnemonic-toolkit/src/wordlists/: mod.rs
crates/mnemonic-toolkit/tests/: bch_residue_separation.rs  bip32_vectors.rs  bitcoind_differential.rs  cli_account_flag.rs  cli_addresses.rs  cli_addresses_electrum.rs  cli_argv_leakage.rs  cli_auto_repair.rs  cli_bip388_distinctness.rs  cli_bip388_double_star_shorthand.rs  cli_bip388_policy_intake.rs  cli_bsms_round1.rs  cli_build_descriptor.rs  cli_bundle_full.rs  cli_bundle_h12_taproot_origin.rs  cli_bundle_h7_prefix_origin.rs  cli_bundle_import_json.rs  cli_bundle_json_intake.rs  cli_bundle_json_threshold.rs  cli_bundle_keyless_descriptor.rs  cli_bundle_language_advisory.rs  cli_bundle_md1_template_form.rs  cli_bundle_md1_template_multisig.rs  cli_bundle_multisig.rs  cli_bundle_multisig_full.rs  cli_bundle_origin_path_canon.rs  cli_bundle_seedqr_slot.rs  cli_bundle_slip0132_info.rs  cli_bundle_watch_only.rs  cli_check_pkk_canonical_golden.rs  cli_compare_cost.rs  cli_concrete_nonranged_xpub_reject.rs  cli_convert_address.rs  cli_convert_bip38.rs  cli_convert_bip39_vectors.rs  cli_convert_convergence.rs  cli_convert_electrum.rs  cli_convert_happy_paths.rs  cli_convert_help_fixtures.rs  cli_convert_json.rs  (+174 more)
crates/mnemonic-toolkit/tests/export_wallet/: coldcard_generic_bip44_mainnet.json  coldcard_generic_bip49_testnet.json  coldcard_generic_bip84_mainnet.json  coldcard_generic_bip84_mainnet_with_master_xpub.json  electrum_multi_2of4.json  (+14 more)
crates/wc-codec/: Cargo.toml
crates/wc-codec/fuzz/: Cargo.toml  rust-toolchain.toml
crates/wc-codec/src/: field.rs  lib.rs  pad.rs  pipeline.rs  poly.rs  raid.rs  regroup.rs  rs.rs  sync.rs  wordmap.rs
crates/wc-codec/tests/: field.rs  pad.rs  pipeline.proptest-regressions  pipeline.rs  raid.rs  regroup.rs  rs.rs  sync.proptest-regressions  sync.rs  wire_golden.rs  wordmap.rs
docs/technical-manual/examples/: Cargo.toml
docs/volvelles/verify/: Cargo.toml
fuzz/: Cargo.toml  rust-toolchain.toml
fuzz/corpus/descriptor_parse/: garbage.bad  k_gt_n.bad  no_placeholder_concrete.bad  pkh.desc  sh_wpkh.desc  sh_wsh_multi_2of2.desc  tr_keyonly.desc  tr_nums_multi_a_2of2.desc  tr_nums_sortedmulti_a_2of2.desc  unbalanced_wsh.bad  wpkh.desc  wsh_ms_hashlock.desc  wsh_ms_hybrid_or_d.desc  wsh_ms_thresh.desc  wsh_ms_timelock.desc  wsh_multi_2of3.desc  wsh_sortedmulti_2of2.desc  wsh_sortedmulti_annotated_2of2.desc
fuzz/dictionaries/: descriptor.dict
fuzz/fuzz_targets/: descriptor_parse.rs
fuzz/tests/: gen_corpus.rs
(+2328 files in other folders)
