[workspace]
members = ["crates/mnemonic-toolkit"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/bg002h/mnemonic-toolkit"
homepage = "https://github.com/bg002h/mnemonic-toolkit"
rust-version = "1.85"

# v0.3.1: pin to rust-miniscript master rev containing PR #910 (sortedmulti_a
# parser) + #915 (Terminal::SortedMulti refactor). Drop on v0.3.2 when a
# crates.io release publishes containing both PRs. See FOLLOWUP
# `tr-sortedmulti-a-via-upstream`.
[patch.crates-io]
miniscript = { git = "https://github.com/rust-bitcoin/rust-miniscript", rev = "95fdd1c5773bd918c574d2225787973f63e16a66" }
