[workspace]
members = ["crates/mnemonic-toolkit", "crates/wc-codec"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Unlicense"
repository = "https://github.com/bg002h/mnemonic-toolkit"
homepage = "https://github.com/bg002h/mnemonic-toolkit"
rust-version = "1.85"

# Pinned to rust-miniscript master rev 95fdd1c (2026-05-02), carried for taproot
# fragments not yet in a crates.io release:
#   - PR #910 (Terminal::SortedMultiA, merged 2026-04-03) — present; gives
#     single-leaf sortedmulti_a today.
#   - PR #915 (Terminal::SortedMulti refactor) — present.
# This rev PREDATES PR #953 (taptree Display fix for depth-≥2 trees, merged
# 2026-05-25), so depth-≥2 taproot restore stays refused (restore.rs
# `ensure_taptree_depth_le_one`). A 2026-06-13 spike confirmed bumping to the
# #953 merge (ff4732e) is build-clean + regression-free, but per advisor we hold:
# the depth-2 fix and md-codec's SortedMultiA renderer both ride the SAME release
# trigger, so a half-bump now only adds a second mid-master pin to carry.
# Latest crates.io is 13.1.0 (2026-06-09) — contains NONE of these (13.x line;
# the PRs target the next major). DROP this [patch] when the first crates.io
# release > 13.1.0 ships containing #953 AND #910 (verify via the miniscript
# CHANGELOG). Tracked: FOLLOWUP `taproot-coverage-cycle-on-miniscript-gt-13-1-0`
# (supersedes the historical `tr-sortedmulti-a-via-upstream`).
[patch.crates-io]
miniscript = { git = "https://github.com/rust-bitcoin/rust-miniscript", rev = "95fdd1c5773bd918c574d2225787973f63e16a66" }
# DEV-ONLY (P6) — remove + bump to mk-codec 0.4.1 / md-codec 0.39.1 at release.
# The Word-Card P0 canonical-payload accessors (`KeyCard::canonical_payload_bytes`
# / `KeyCard::from_canonical_payload_bytes`, `Descriptor::canonical_payload_bytes`
# / `Descriptor::from_canonical_payload_bytes`) are on the sibling-codec MAINLINES
# but NOT yet published to crates.io. These path overrides supply the
# accessor-bearing local copies so the toolkit's `word_card_adapter` builds; the
# declared `mk-codec`/`md-codec` version reqs in
# `crates/mnemonic-toolkit/Cargo.toml` are left as-is. The orchestrator REMOVES
# this block and bumps the published versions at the release seam.
md-codec = { path = "/scratch/code/shibboleth/descriptor-mnemonic/crates/md-codec" }
mk-codec = { path = "/scratch/code/shibboleth/mnemonic-key/crates/mk-codec" }
