[package]
name = "mnemonic-toolkit"
version = "0.23.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Engraving-bundle CLI for the m-format Bitcoin self-custody backup star (ms1 + mk1 + md1)."
documentation = "https://docs.rs/mnemonic-toolkit"
readme = "README.md"
keywords = ["bitcoin", "bip39", "bip93", "engraving", "self-custody"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]

[[bin]]
name = "mnemonic"
path = "src/main.rs"

[dependencies]
ms-codec = "0.2.0"
mk-codec = "0.3.1"
md-codec = "0.34.0"
hmac = "0.12"
miniscript = { version = "13", default-features = false, features = ["std"] }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["std", "getrandom"] }
regex = "1"
sha2 = "0.10"
bip38 = "1.1"
bip39 = { version = "2", features = ["all-languages"] }
bitcoin = "0.32"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
unicode-normalization = "0.1"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
