[package]
name = "mnemonic-toolkit"
version = "0.37.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Engraving-bundle CLI for the m-format Bitcoin self-custody backup star (ms1 + mk1 + md1)."
documentation = "https://docs.rs/mnemonic-toolkit"
readme = "README.md"
keywords = ["bitcoin", "bip39", "bip93", "engraving", "self-custody"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]

[[bin]]
name = "mnemonic"
path = "src/main.rs"

[dependencies]
ms-codec = "0.2.0"
mk-codec = "0.3.1"
md-codec = "0.34.0"
aes = "0.8"
base64 = "0.22"
cbc = "0.1"
crypto-bigint = "0.5"
ctr = "0.9"
flate2 = "1"
hmac = "0.12"
miniscript = { version = "13", default-features = false, features = ["std"] }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["std", "getrandom"] }
regex = "1"
sha2 = "0.10"
bip38 = "1.1"
bip39 = { version = "2", features = ["all-languages"] }
# v0.36.0 `mnemonic verify-message` — BIP-322 simple/full message-signature
# VERIFY (rust-bitcoin org crate; depends on bitcoin ^0.32.5 → shares our
# bitcoin 0.32.8, no duplicate). Exact-pinned (0.0.x churn). Legacy
# ("Bitcoin Signed Message") verify uses bitcoin::sign_message directly.
bip322 = "=0.0.10"
bitcoin = { version = "0.32", features = ["base64"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
similar = "2"
unicode-normalization = "0.1"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
