[package]
name = "mnemonic-toolkit"
version = "0.87.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Engraving-bundle CLI for the m-format Bitcoin self-custody backup star (ms1 + mk1 + md1)."
documentation = "https://docs.rs/mnemonic-toolkit"
readme = "README.md"
keywords = ["bitcoin", "bip39", "bip93", "engraving", "self-custody"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]

[[bin]]
name = "mnemonic"
path = "src/main.rs"

# `cfg(fuzzing)` is set by cargo-fuzz only (via `--cfg fuzzing`) to activate the
# `cfg(fuzzing)`-gated `parse_descriptor` mount in `src/lib.rs` (see that file's
# header + `fuzz/`). It is unknown to every normal build, so without this
# check-cfg declaration clippy `-D warnings` (CI rust.yml) would HARD-FAIL on the
# `unexpected_cfgs` lint. This line is the only normal-build-visible change of
# the fuzz target; it has no runtime effect.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[dependencies]
# ms-codec 0.7 vendored codex32 inline (Cycle-B, shape A) and dropped the
# external `codex32` crate; `friendly_ms_codec` now names the codex32 share-error
# types via `ms_codec::codex32::` (no direct codex32 dep).
ms-codec = "0.7"
mk-codec = "0.4.1"
md-codec = "0.42.0"
# Word-Card value engine (P6) — the in-workspace RS/RAID/sync/word codec. The
# toolkit consumes it via the canonical-payload adapter + the `word-card` CLI.
wc-codec = { path = "../wc-codec" }
aes = "0.8"
base64 = "0.22"
cbc = "0.1"
crypto-bigint = "0.5"
ctr = "0.9"
flate2 = "1"
hmac = "0.12"
miniscript = { version = "13", default-features = false, features = ["std"] }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["std", "getrandom"] }
regex = "1"
sha2 = "0.10"
bip38 = "1.1"
bip39 = { version = "2", features = ["all-languages"] }
# v0.36.0 `mnemonic verify-message` — BIP-322 simple/full message-signature
# VERIFY (rust-bitcoin org crate; depends on bitcoin ^0.32.5 → shares our
# bitcoin 0.32.8, no duplicate). Exact-pinned (0.0.x churn). Legacy
# ("Bitcoin Signed Message") verify uses bitcoin::sign_message directly.
bip322 = "=0.0.10"
bitcoin = { version = "0.32", features = ["base64"] }
clap = { version = "4", features = ["derive"] }
# v0.73.0 `mnemonic gen-man` — roff man-page generation from the compiled clap
# `Command` tree. Requires clap ^4.0 (we are 4.6.1 — satisfied, no clap bump).
clap_mangen = "0.3"
hex = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
similar = "2"
unicode-normalization = "0.1"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
proptest = "1"
# Cycle E (`mk1-repair-set-level-reverify`) P0 — deterministic seeded search
# for the §4.1 pinned BCH-miscorrection anchor + the §4.8 rate harness.
# `rand 0.8` is already resolved transitively (rand_core 0.6 / rand_chacha
# 0.3, both direct `[dependencies]`); this only promotes it to a directly
# nameable dev-dependency for `rand::rngs::StdRng` — no new Cargo.lock
# version, test-only (no production binary impact).
rand = "0.8"
