[package]
name = "volvelle-verify"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "Behavioral drift-gate emitting canonical (input, codec_output) vectors for the m-format constellation paper-computer wheels (mk1-regular, mk1-long, md1-regular)."

# Standalone workspace: this crate is intentionally NOT a member of the
# mnemonic-toolkit main workspace at ../../../Cargo.toml. Path-deps below
# reach into sibling repos (mnemonic-key, descriptor-mnemonic), which would
# break `cargo build --workspace` from a single-repo clone of the toolkit.
# Invoke from inside this directory: `cargo run --bin print-constants > ../bch-params.toml`.
[workspace]

[[bin]]
name = "print-constants"
path = "src/main.rs"

[dependencies]
mk-codec = { path = "../../../../mnemonic-key/crates/mk-codec" }
md-codec = { path = "../../../../descriptor-mnemonic/crates/md-codec" }
